feat: added pass hashing